# mx_master_remake

./: .gitignore  Cargo.toml  nrf52840.svd
.cargo/: config.toml
pcb/mx_master_remake/: battery.kicad_sch  buttons.kicad_sch  components.kicad_sch  connectors.kicad_sch  fp-lib-table  leds.kicad_sch  magnet.kicad_sch  misc.kicad_sch  mx_master_remake.kicad_dru  mx_master_remake.kicad_pcb  mx_master_remake.kicad_pro  mx_master_remake.kicad_sch  power.kicad_sch  sensor.kicad_sch  sym-lib-table  usb.kicad_sch  wheels.kicad_sch
pcb/mx_master_remake/bom/: ibom.html
pcb/mx_master_remake/production/mx_master_remake_2024-02-12_23-51-18/: netlist.ipc
src/: main.rs
