[package]
authors = ["Tyler Richard <tylerrichard215@gmail.com>"]
name = "mx-master-remake"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
# defmt = "0.3"
# defmt-rtt = "0.4"
# panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-probe = { version = "0.3", features = ["print-rtt"] }
cortex-m-semihosting = "0.5.0"
nrf52840-hal = "0.16.0"
rtt-target = "0.5.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
